--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,20 +1,12 @@
-
 <label>Server Name</label><br>
 <!--<input
     type="text"
     class="form-control"
     (input)="onUpdateServerName($event)"><br>-->
-<input
-    type="text"
-    class="form-control"
-    [(ngModel)] = "serverName"
-   
-   >
+<input type="text" class="form-control" [(ngModel)]="serverName">
 <!--<p>{{ serverName }}</p>-->
 <br>
-<button class="btn btn-primary" 
-[disabled]="!allowNewServer"
-(click)="onCreateServer()">Add server</button>
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add server</button>
 <!--<p [innerText]="allowNewServer"></p>
 <p>{{ serverCreationStatus }}</p>-->
 <!--<p *ngIf= "serverCreated; else noServer">Server was created, server name is {{serverName}}</p>
@@ -22,7 +14,7 @@
   <p>No server was created!</p>
 </ng-template>-->
 
-<p *ngIf= "serverCreated">Server was created, server name is {{serverName}}</p>
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
 
 
 <app-server *ngFor="let server of servers"></app-server>
@@ -51,11 +43,10 @@
 -->
 <hr>
 <button class="btn btn-primary" (click)="showSecret = !showSecret">Display details</button>
-<p *ngIf = "showSecret">Secret password = tuna</p>
+<p *ngIf="showSecret">Secret password = tuna</p>
 <button class="btn btn-primary" (click)="onToggleDetails()">Display details</button>
-<p *ngIf = "showSecret">Secret password = tuna</p>
-<div *ngFor = "let logItem of log"
-[ngStyle] = "{backgroundColor: logItem >= 5 ? 'blue' : 'transparent'}"
-[ngClass] = "{'white-text' : logItem >= 5}"
-
->{{logItem}}</div>
+<div 
+*ngFor="let logItem of log; let i = index" 
+  [ngStyle]="{backgroundColor: i >= 4 ? 'blue' : 'transparent'}"
+  [ngClass]="{'white-text' : i >= 4}">
+  {{logItem}}</div>
